--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
 .App {
-  text-align: center;
+  background-image: url("./resources/background/wood-background.jpg");
+  background-position: center top;
+  background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  width: 98%;
+  margin: 0 auto;
+  max-width: 600px;
+  height: 3854px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.image-stack {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(33, 3%);
+  rotate: z 1deg;
+}
+
+.photoFilter {
+  background: #cc9900;
+  opacity: 0.1;
   }
+  
+img {
+  width: 100%;
+  display: block;
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.image-stack__item--top-trick-title {
+  z-index: 4;
+  grid-row: 25 / span 3;
+  grid-column: 4;
+  margin: 0;
+  background-color: #EBEBDB;
+  rotate: z -3deg;
 }
 
-.App-link {
-  color: #61dafb;
+.image-stack__item--top {
+  z-index: 3;
+  grid-row: 4;
+  grid-column: 1 / span 8;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.image-stack__item--middle {
+  z-index: 2;
+  grid-row: 9 / span 16;
+  grid-column: 2 / span 6;
+  margin-left: 2%;
+  margin-right: 8%;
+}
+
+.image-stack__item--bottom {
+  z-index: 1;
+  grid-column: 1 / span 8;
+  grid-row: 4;
+}
+
+@font-face {
+  font-family: 'Impact Label';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Impact Label'), url('./resources/fonts/Impact_label.woff') format('woff');
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
