--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,43 @@
 .image-stack {
   display: grid;
   position: relative;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(9, 1fr);
   grid-template-rows: repeat(33, 3%);
   rotate: z 1deg;
 }
 
+/* Trick Title */
+.image-stack__item-level-4 {
+  z-index: 4;
+  grid-row: 25 / span 3;
+  grid-column: 5;
+}
+
+/* Photo Filter */
+.image-stack__item-level-3 {
+  z-index: 3;
+  grid-row: 4;
+  grid-column: 2 / span 8;
+}
+
+/* Polaroid Frame */
+.image-stack__item-level-2 {
+  z-index: 2;
+  grid-row: 9 / span 16;
+  grid-column: 3 / span 6;
+  margin: 0% 8% 0% 2%;
+}
+
+/* Trick JPG & GIF */
+.image-stack__item-level-1 {
+  z-index: 1;
+  grid-row: 4;
+  grid-column: 2 / span 8;
+}
+
 .photoFilter {
   background: #cc9900;
-  opacity: 0.1;
+  opacity: 0.2;
   }
   
 .trickTitle {
@@ -34,31 +63,6 @@ img {
   width: 100%;
   display: block;
   position: relative;
-}
-
-.image-stack__item-level-4 {
-  z-index: 4;
-  grid-row: 25 / span 3;
-  grid-column: 4;
-}
-
-.image-stack__item-level-3 {
-  z-index: 3;
-  grid-row: 4;
-  grid-column: 1 / span 8;
-}
-
-.image-stack__item-level-2 {
-  z-index: 2;
-  grid-row: 9 / span 16;
-  grid-column: 2 / span 6;
-  margin: 0% 8% 0% 2%;
-}
-
-.image-stack__item-level-1 {
-  z-index: 1;
-  grid-row: 4;
-  grid-column: 1 / span 8;
 }
 
 @font-face {
