--- a/src/App.css
+++ b/src/App.css
@@ -23,22 +23,22 @@
 .image-stack__item-level-4 {
   z-index: 4;
   grid-row: 25 / span 3;
-  grid-column: 5;
+  grid-column: 3 / span 7;
 }
 
 /* Photo Filter */
 .image-stack__item-level-3 {
   z-index: 3;
-  grid-row: 4;
+  grid-row: 4 / span 5;
   grid-column: 2 / span 8;
 }
 
 /* Polaroid Frame */
 .image-stack__item-level-2 {
   z-index: 2;
-  grid-row: 9 / span 16;
+  grid-row: 8 / span 18;
   grid-column: 3 / span 6;
-  margin: 0% 8% 0% 2%;
+  margin: 0% 2% 2% 0%;
 }
 
 /* Trick JPG & GIF */
@@ -50,12 +50,11 @@
 
 .photoFilter {
   background: #cc9900;
-  opacity: 0.2;
+  opacity: 0.15;
   }
   
 .trickTitle {
   margin: 0;
-  background-color: #EBEBDB;
   rotate: z -1deg;
 }
 
