--- a/src/App.css
+++ b/src/App.css
@@ -15,29 +15,29 @@
   display: grid;
   position: relative;
   grid-template-columns: repeat(9, 1fr);
-  grid-template-rows: repeat(35, 3%);
+  grid-template-rows: repeat(31, 3%);
   rotate: z 1deg;
 }
 
 /* Trick Title */
 .image-stack__item-level-4 {
   z-index: 4;
-  grid-row: 15 / span 3;
+  grid-row: 12 / span 3;
   grid-column: 2 / span 7;
-  margin: 3% 0% 0% 7%;
+  margin: 5% 0% 0% 7%;
 }
 
 /* Polaroid Frame */
 .image-stack__item-level-3 {
   z-index: 3;
-  grid-row: 4 / span 5;
+  grid-row: 1 / span 5;
   grid-column: 1 / span 9;
 }
 
 /* Photo Filter */
 .image-stack__item-level-2 {
   z-index: 2;
-  grid-row: 6 / span 11;
+  grid-row: 3 / span 11;
   grid-column: 2 / span 7;
   margin: 3% 0% 2% 2%;
 }
@@ -45,22 +45,24 @@
 /* Trick JPG & GIF */
 .image-stack__item-level-1 {
   z-index: 1;
-  grid-row: 4;
+  grid-row: 1;
   grid-column: 1 / span 9;
+  width: 75%;
+  margin: 13% 8% 13% 13.5%;
 }
 
 /* Note Text */
 .image-stack__item-level-2-A {
   z-index: 2;
-  grid-row: 21;
+  grid-row: 18;
   grid-column: 1 / span 9;
-  margin: 5% 2% 0% 4%;
+  margin: 1% 2% 0% 4%;
 }
 
 /* Note Background */
 .image-stack__item-level-1-A {
   z-index: 1;
-  grid-row: 21;
+  grid-row: 17 / span 2;
   grid-column: 1 / span 9;
 }
 
