--- a/src/App.css
+++ b/src/App.css
@@ -52,18 +52,19 @@
 }
 
 /* Note Text */
-.image-stack__item-level-2-note-text {
-  z-index: 2;
-  grid-row: 18;
-  grid-column: 1 / span 9;
-  margin: 1% 2% 0% 4%;
+.image-stack__item-level-5-note-text {
+  z-index: 5;
+  grid-row: 19;
+  grid-column: 1 / span 8;
+  margin: 3% 3% 0% 12%;
 }
 
 /* Note Background */
-.image-stack__item-level-1-note-background {
-  z-index: 1;
-  grid-row: 17 / span 2;
+.image-stack__item-level-4-note-background {
+  z-index: 4;
+  grid-row: 18 / span 2;
   grid-column: 1 / span 9;
+  /* margin: 7% 0% 0% 0%; */
 }
 
 .photoFilter {
@@ -73,13 +74,6 @@
   
 .trickLabel {
   rotate: z -1deg;
-}
-
-.trickNotes {
-}
-
-.noteBackground {
-  
 }
 
 img {
