--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: repeat(32, 20px);
   rotate: z 1deg;
-  margin: 0% 0% 5% 0%;
+  /* margin: 0% 0% 5% 0%; */
 }
 
 /* Polaroid Frame */
@@ -49,21 +49,21 @@
   z-index: 4;
   grid-row: 11 / span 3;
   grid-column: 2 / span 7;
-  margin: 9% 0% 0% 7%;
+  margin: 5% 0% 0% 7%;
 }
 
 /* Note Text */
 .image-stack__item-level-5-note-text {
   z-index: 5;
-  grid-row: 18;
+  grid-row: 16;
   grid-column: 1 / span 8;
-  margin: 3% 3% 0% 12%;
+  margin: 5% 2% 0% 12%;
 }
 
 /* Note Background */
 .image-stack__item-level-4-note-background {
   z-index: 4;
-  grid-row: 17 / span 2;
+  grid-row: 16 / span 2;
   grid-column: 1 / span 9;
   /* margin: 7% 0% 0% 0%; */
 }
