--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,12 @@
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: repeat(32, 20px);
   rotate: z 1deg;
-  /* margin: 0% 0% 5% 0%; */
 }
 
 /* Polaroid Frame */
 .image-stack__item-level-3-polaroid-frame {
   z-index: 3;
-  grid-row: 1 / span 5;
+  grid-row: 1;
   grid-column: 1 / span 9;
 }
 
@@ -47,7 +46,7 @@
 /* Trick Label */
 .image-stack__item-level-4-trick-label {
   z-index: 4;
-  grid-row: 11 / span 3;
+  grid-row: 11;
   grid-column: 2 / span 7;
   margin: 5% 0% 0% 7%;
 }
@@ -63,7 +62,7 @@
 /* Note Background */
 .image-stack__item-level-4-note-background {
   z-index: 4;
-  grid-row: 16 / span 2;
+  grid-row: 16;
   grid-column: 1 / span 9;
   /* margin: 7% 0% 0% 0%; */
 }
