--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .App {
   background-color: black;
   background-image: url("./resources/background/wood-background.jpg");
