--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,8 @@ body {
   z-index: 3;
   grid-row: 1;
   grid-column: 1 / span 9;
+
+  margin: -5% 0% 0% -2%;
 }
 
 .stack-1-trick-still-and-demo {
@@ -56,7 +58,7 @@ body {
   grid-row: 16;
   grid-column: 1 / span 9;
 }
-  
+
 .trickLabel {
   rotate: z -1deg;
 }
@@ -68,15 +70,17 @@ img {
 }
 
 @font-face {
-  font-family: 'Impact Label';
+  font-family: "Impact Label";
   font-style: normal;
   font-weight: normal;
-  src: local('Impact Label'), url('./resources/fonts/impact-label.woff') format('woff');
+  src: local("Impact Label"),
+    url("./resources/fonts/impact-label.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'JMH Typewriter dry Bold';
+  font-family: "JMH Typewriter dry Bold";
   font-style: normal;
   font-weight: normal;
-  src: local('JMH Typewriter dry Bold'), url('./resources/fonts/jmh-typewriter-dry-bold.woff') format('woff');
+  src: local("JMH Typewriter dry Bold"),
+    url("./resources/fonts/jmh-typewriter-dry-bold.woff") format("woff");
 }
