Add note backgrounds.

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,22 @@ body {
   margin: -4.3% 0% 0% -1%;
 }
 
+.note-6 {
+  margin: 7% 2% 0% 17%;
+}
+
+.note-7 {
+  margin: 7% 2% 0% 12%;
+}
+
+.note-8 {
+  margin: 9% 2% 0% 11.2%;
+}
+
+.note-9 {
+  margin: 7% 2% 0% 14%;
+}
+
 img {
   width: 100%;
   display: block;
