--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,14 @@ body {
   margin: 7% 0% 0% 7%;
 }
 
+.stack-3-trick-source {
+  z-index: 4;
+  grid-row: 6;
+  grid-column: 8 / span 2;
+  margin: 7% 0% 0% 11%;
+  writing-mode: vertical-rl;
+}
+
 .stack-4-note-text {
   z-index: 5;
   grid-row: 16;
@@ -55,6 +63,27 @@ body {
   z-index: 4;
   grid-row: 16;
   grid-column: 1 / span 9;
+}
+
+.trickSource {
+  rotate: z -90deg;
+}
+
+a:link {
+  color: black;
+}
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: hotpink;
+}
+
+/* Clicking link */
+a:active {
+  color: hotpink;
 }
 
 .trickLabel {
